fix: align-items: flex-start

--- a/src/presentation/components/music-player/music-player.scss
+++ b/src/presentation/components/music-player/music-player.scss
@@ -5,7 +5,7 @@
 }
 .song-name-container {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   flex-direction: column;
   font-weight: bold;
 }
